<resources>
    <string name="app_name">Habitos_Saludables_G10</string>
    <string name="facebook_app_id">519401649489505</string>
    <string name="fb_login_protocol_scheme">fb519401649489505</string>
    <string name="title_activity_menu_principal">MenuPrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bienvenido">Bienvenido aqui los habitos que desea fomentar</string>
    <string name="Estadisticas">Estadisticas</string>
    <string name="Habitos">Habitos</string>
    <string name="Exportar">Exportar</string>
    <string name="AgregarHabito">Agregar Habito</string>
    <string name="insertarHabito">Crear nuevo habito</string>
    <string name="idHabito">Identificador</string>
    <string name="nombre">Nombre:</string>
    <string name="Objetivo">Objetivo</string>
    <string name="opciones">Opciones:</string>
    <string name="insertar">Registrar</string>
    <string name="limpiar">Limpiar</string>
    <string name="horario">Establecer horario:</string>
    <string name="Lunes">Lunes</string>
    <string name="Martes">Martes</string>
    <string name="Miercoles">Miercoles</string>
    <string name="Jueves">Jueves</string>
    <string name="Viernes">Viernes</string>
    <string name="Sabado">Sabado</string>
    <string name="Domingo">Domingo</string>
    <string name="hora">Hora:</string>
    <string name="fechaCreacion">Fecha creacion:</string>
    <string name="ExportarPdf">Exportar PDF</string>
    <string name="Bienvenida">Bienvenido</string>
    <string name="grupo">App para fomentar habitos saludables</string>
    <string name="grupo10">PDM115 - G10</string>
    <string name="establecerhora">Establecer hora:</string>
    <string name="EjerciciosPara">Ejercicios Recomendados para la buena salud</string>
    <string name="Video1">Como quemar grasa</string>
    <string name="videos">Consultar los Mejores videos</string>
    <string name="Excuchar">Escuchar Indicaciones Extra</string>
    <string name="Video2">Aumentar la habilidad fisica</string>
    <string name="audios">Escuchar audios relajantes</string>
    <string name="btnplay">Reproducir</string>
    <string name="btnstop">Pausar</string>
    <string name="audiosA">Audios para mejorar su concentracion y aliviar el estres</string>
    <string name="naturaleza1">Sonidos de la naturaleza para aliviar el estres.</string>
    <string name="naturaleza2">Fluir del agua para canalizar nuestras molestias.</string>
    <string name="naturaleza3">Sonidos para meditar y practicar yoga.</string>
    <string name="RegistrarR">Registrar Actividad</string>
    <string name="Comentario">Comentario</string>
    <string name="Registros">Registros en la base:</string>
    <string name="estableceralarma">Crear alarma</string>







    <string name="goal">Objetivo</string>
    <string name="step_size">Longitud de paso</string>
    <string name="about">Acerca de</string>
    <string name="account">Cuenta</string>
    <string name="goal_summary">Objetivo actual: %,d pasos</string>
    <string name="step_size_summary">Longitud de paso actual: %1$.2f %2$s</string>
    <string name="sign_in">Inicia sesión con tu cuenta de Google para usar las funcionalidades de Logros y Marcadores</string>
    <string name="signed_in">Sesión iniciada como %s</string>
    <string name="export_summary">Guarda tus datos en un archivo .csv</string>
    <string name="export_title">Exportar/Copia de seguridad</string>
    <string name="import_summary">Recupera datos guardados con anterioridad</string>
    <string name="import_title">Importar/Restaurar</string>
    <string name="notification">Mostrar notificación</string>
    <string name="set_goal">Establecer objetivo</string>
    <string name="set_step_size">Establecer longitud de paso</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="file_cant_read">Error: no se puede leer %s </string>
    <string name="error_file">Error accediendo al archivo: %s</string>
    <string name="error_external_storage_not_available">Error: Almancenamiento externo no disponible</string>
    <string name="data_saved">Datos guardados en %s</string>
    <string name="entries_imported">%d entradas recuperadas</string>
    <string name="entries_ignored">%d entradas fueron ignoradas ya que no contenían datos válidos</string>
    <string name="entries_overwritten">%d entradas fueron sobreescritas con los datos importados</string>
    <string name="sign_in_necessary">Inicio de sesión necesario</string>
    <string name="please_sign_in_with_your_google_account">Por favor, inicia sesión con tu cuenta de Google+ para usar esta funcionalidad.</string>
    <string name="steps">pasos</string>
    <string name="text_color">Color de texto:</string>
    <string name="background_color">Color de fondo:</string>
    <string name="settings">Ajustes</string>
    <string name="achievements">Logros</string>
    <string name="leaderboard">Marcadores</string>
    <string name="faq">Ayuda</string>
    <string name="goal_reached_notification">¡Objetivo alcanzado! %s pasos y contando</string>
    <string name="notification_text">Faltan %s pasos</string>
    <string name="total">Total</string>
    <string name="notification_title">Podómetro está contando</string>
    <string name="your_progress_will_be_shown_here_soon">Tu progreso se mostrará aquí pronto</string>
    <string name="average">Media</string>
    <string name="record">Récord</string>
    <string name="total_last_7_days">Total últimos 7 días</string>
    <string name="average_last_7_days">Media últimos 7 días</string>
    <string name="total_this_month">Total este mes</string>
    <string name="average_this_month">Media este mes</string>
    <string name="file_already_exists">El archivo ya existe. ¿Estás seguro de querer sobreescribirlo?</string>
    <string name="about_app_version">Versión: %s</string>
    <string name="since">Desde %s</string>
    <string name="start">Iniciar</string>
    <string name="stop">Parar</string>
    <string name="close">cerrar</string>
    <string name="no_split_active">No hay contador parcial activo. Pulsa iniciar para contar los pasos a partir de este momento</string>
    <string name="split_count">Contador parcial</string>
    <string name="no_sensor">Sensor not found</string>
    <string name="no_sensor_explain">This app requires a dedicated hardware step sensor - which your device does not have. This app won\'t run on your device.</string>
    <string name="notification_settings">Notification settings</string>


    <string name="RegistrarR">Registrar Actividad</string>
    <string name="Comentario">Comentario</string>
    <string name="Registros">Registros en la base:</string>
    <string name="estableceralarma">Crear alarma</string>
    <string name="txtAltitud">Altitud </string>
    <string name="txtLatitud">Latitud </string>
    <string name="txtLongitud">Longitud </string>
    <string name="txtDireccion">Direccion </string>
    <string name="btnObtenerDatos">Mas detalles </string>
    <string name="AbrirCalendario">Abrir Calendario </string>
    <string name="gps">Ver mi Ubicacion </string>

</resources>