<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:padding="10dp"
    android:background="@drawable/borde_items"
    android:descendantFocusability="blocksDescendants">
    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp">

            <TextView
                android:id="@+id/textcodigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idHabito"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/codigohabito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idHabito" />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp">


            <TextView
                android:id="@+id/texnombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp">

            <TextView
                android:id="@+id/textobjetivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Objetivo"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/objetivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Objetivo" />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp">


            <TextView
                android:id="@+id/textfecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechaCreacion"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechaCreacion" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/texthorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horario"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp">

            <Switch android:id="@+id/idLun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lunes"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp">

            <Switch android:id="@+id/idMar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Martes"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp">
            <Switch android:id="@+id/idMie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Miercoles"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp">
            <Switch android:id="@+id/idJue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Jueves"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp">

            <Switch android:id="@+id/idVie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Viernes"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp">
            <Switch android:id="@+id/idSab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sabado"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp">
            <Switch android:id="@+id/idDom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Domingo"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>