<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".AudioActivity">
    <TextView
        android:id="@+id/Encabezado"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:text="@string/audiosA"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/round_item">
        <TextView
            android:id="@+id/tituloAudio"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/naturaleza1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_margin="6dp"
                android:id="@+id/play"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/btnplay"/>
            <Button
                android:layout_margin="6dp"
                android:id="@+id/stop"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/btnstop"/>
        </LinearLayout>
    </LinearLayout>

    <!---->
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/round_item">
        <TextView
            android:id="@+id/tituloAudio2"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/naturaleza2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_margin="6dp"
                android:id="@+id/play2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/btnplay"/>
            <Button
                android:layout_margin="6dp"
                android:id="@+id/stop2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/btnstop"/>
        </LinearLayout>
    </LinearLayout>
    <!---->
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/round_item">
        <TextView
            android:id="@+id/tituloAudio3"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/naturaleza3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_margin="6dp"
                android:id="@+id/play3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/btnplay"/>
            <Button
                android:layout_margin="6dp"
                android:id="@+id/stop3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/btnstop"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>